# TensorParallelPTX

./: .gitignore  CMakeLists.txt  CURR.md  LEARN.md  README.md  TP_WALKTHROUGH.md  profile_walltime.txt
include/: config.h  cuda_utils.h  tp_utils.h
kernels/: fp16_wmma.cu  int4_ptx_mma_k64_x4_x2nontrans_ca.cu  int4_wmma.cu  int8_ptx_mma_k32.cu  int8_wmma.cu
prof/: walltime_ad1.txt
prof/nsys/fp16/: nsys_summary.txt  tp_timeline.nsys-rep
prof/nsys/fp16_wmma/: walltime_fp16_wmma.txt
prof/nsys/int4_ptx_mma_k64_x4_x2nontrans_ca/: walltime_int4_ptx_mma_k64_x4_x2nontrans_ca.txt
prof/nsys/int4_wmma/: walltime_int4_wmma.txt
prof/nsys/int8_ptx_mma_k32/: walltime_int8_ptx_mma_k32.txt
prof/nsys/int8_wmma/: walltime_int8_wmma.txt
src/: data.cu  data.h  main.cu  solver.cu  solver.h
src/app/: cli.cu  cli.h  dist_context.cu  dist_context.h  logging.cu  logging.h  types.h
src/comm/: nccl_utils.cu  nccl_utils.h
src/tp/: oned_runner.cu  oned_runner.h  sharding.cu  sharding.h  summa_runner.cu  summa_runner.h
src/verify/: verify_runner.cu
